練習フォルダにatcoder-cilの設定を導入 参考URL: https://blog.spiralray.net/cp/devenv-cpp atcoder-cli チュートリアル参考URL http://tatamo.81.la/blog/2018/12/07/atcoder-cli-tutorial/

--- a/ABC/練習/.vscode/launch.json
+++ b/ABC/練習/.vscode/launch.json
@@ -6,12 +6,13 @@
     "configurations": [
 
         {
+            "name": "(LLDB) Debug",
             "type": "lldb",
             "request": "launch",
-            "name": "Debug",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
             "args": [],
-            "cwd": "${fileDirname}"
+            "cwd": "${fileDirname}/",
+            "preLaunchTask": "clang++ build active file",
         }
     ]
 }
