--- a/ABC/練習/.vscode/settings.json
+++ b/ABC/練習/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
-    "files.associations": {
-        "iostream": "cpp"
-    }
+    "code-runner.executorMap": {
+        "cpp": "cd $dir && rm $dir/$fileNameWithoutExt && clang++ -std=c++17 $fileName -o $fileNameWithoutExt && $dir/$fileNameWithoutExt",
+    },
+    "code-runner.clearPreviousOutput": true,
+    "code-runner.runInTerminal": true,
+    "code-runner.saveFileBeforeRun": true,
+    "lldb.launch.expressions": "native",
 }
